5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1764_1583.log
== SUBMITION (2019-05-21 02:16:21) 
-- CODE:
from numpy import *
-- EXECUTION TIME:
2.21374
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 02:16:30) 
-- CODE:
from numpy import *
-- EXECUTION TIME:
0.423252
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:40:06) 
-- CODE:
from numpy import *
-- EXECUTION TIME:
0.479912
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:20:14) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0:
		x = s(:3)
		print(x)
	i += 1
	
-- ERROR:
File "XXXX", line 7
    x = s(:3)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:20:54) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0:
		x = s[:3]
		print(x)
	i += 1
	
-- OUTPUT:
123
123
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:21:13) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0:
		x = s[:3]
		print(x)
	i += 1
	
-- OUTPUT:
123
123
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:21:51) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[:3]
		print(x)
	i += 1
	
-- OUTPUT:
123
123
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:23:50) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		c = x + "." + x
		
	i += 1

print(x)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:23:58) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		c = x + "." + x
		
	i += 1

print(c)
-- OUTPUT:
3.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:24:02) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		c = x + "." + x
		
	i += 1

print(c)
-- OUTPUT:
3.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:24:11) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:(i+3)]
		c = x + "." + x
		
	i += 1

print(c)
-- OUTPUT:
3.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:24:14) 
-- CODE:
s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:(i+3)]
		c = x + "." + x
		
	i += 1

print(c)
-- OUTPUT:
3.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:26:18) 
-- CODE:
s = str(input(""))

i = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		c = x


print(c)
-- OUTPUT:
3.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:26:24) 
-- CODE:
s = str(input(""))

i = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		c = x
		
		i += 1


print(c)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:26:38) 
-- CODE:
s = str(input(""))

i = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		print(x)
		c = x
		
		i += 1


print(c)
-- OUTPUT:
123
23
3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:26:50) 
-- CODE:
s = str(input(""))

i = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		print(x)
		c = x
		
		i += 3


print(c)
-- OUTPUT:
123
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:30:16) 
-- CODE:
s = str(input(""))

i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		c = v[i]
		
		i += 3
		
		c = 0

print(v)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v = arange(len(s))
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:30:32) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		c = v[i]
		
		i += 3
		
		c = 0

print(v)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:30:44) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		c = v[i]
		
		i += 3
		
		

print(v)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:31:12) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		d = x
		c = v[i]
		
		i += 3
		
		

print(v)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:31:50) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[i] = x
		
		i += 3
		
		

print(v)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:32:14) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:32:20) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:33:05) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:34:29) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(v)
str.split(v, )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:35:36) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(v)
str.split(g, )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:35:42) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(g)
str.split(g, )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:35:53) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(g)
str.split(g,".")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:35:58) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(g)
str.split(g,".")
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:36:05) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(g)
str.split(g,3)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 23:36:12) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
v = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i < len(s):
		x = s[i:(i+3)]
		
		
		v[k] = x
		
		i += 3
		k += 1
		
		

print(v)
print(x)

g = str(v)
print(g)
str.split(g,3)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:09:42) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

if len(s) % 3 = 0 and len(s) >= 3:
	while i != len(s):
		s[i:i+3]
		print(s)
		
		i += 1
-- ERROR:
File "XXXX", line 7
    if len(s) % 3 = 0 and len(s) >= 3:
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:09:46) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		s[i:i+3]
		print(s)
		
		i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:09:50) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		s[i:i+3]
		print(s)
		
		i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:10:28) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		v = s[i:i+3]
		print(v)
		
		i += 3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:12:27) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		v = s[i:i+3]
		
		d[i] = v
		
		i += 3
		
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:12:44) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:13:00) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:13:17) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:13:18) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:14:03) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0


if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		d = arange(len(s) - (i+2))
		
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:14:23) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0


if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		d = arange(len(s) - (i+2))
		print(size(d))
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:15:02) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0


if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		d = arange(len(s) - (i+2))
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:15:52) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0


if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		d = arange(len(s) - (i+2))
		v = arange(len(s) - (i+2))
		
		print(d)
		v[i] = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:16:07) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		d = arange(len(s) - (i+2))
		v = arange(len(s) - (i+2))
		
		print(d)
		v[i] = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:16:24) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		d = arange(len(s) - (i+2))
		v = arange(len(s) - (i+2))
		
		print(d)
		v[i] = s[i:i+3]
		
		d[k] = v[i]
		
		i += 3
		k += 1

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:16:46) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = 0

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		d = arange(len(s) - (i+2))
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:17:11) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:12:20) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:13:02) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = d = arange(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:13:39) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = zeros(len(s), dtype = int)

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:59:25) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

while i < size(s):
	x = s[i:i+3]
	
	i += 3
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:59:35) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

while i < size(s):
	x = s[i:i+3]
	
	i += 3
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:59:39) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

while i < size(s):
	x = s[i:i+3]
	
	i += 3
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:00:20) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

while i < len(s):
	if len[s] % 3 == 0 and len[s] >= 3:
		
		x = s[i:i+3]

		i += 3

		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:00:33) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]

		i += 3

		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:25:37) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = zeros(len(s), dtype = int)

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:27:05) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0
d = zeros(len(s), dtype = int)

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0],d[1],d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:45:22) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0

d = zeros(  len(s) - (len(s)/3)      , dtype = int)

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:46:06) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0

d = zeros(  len(s) - (len(s) - 3.0)      , dtype = int)

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:49:10) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0

d = zeros(len(s), dtype = int)

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:49:16) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0

d = zeros(len(s), dtype = int)

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:51:00) 
-- CODE:
from numpy import *

s = str(input(""))

k = 0
i = 0

d = zeros(len(s))

if len(s) % 3 == 0 and len(s) >= 3:
	while i != len(s):
		
		
		print(d)
		v = s[i:i+3]
		
		d[k] = v
		
		i += 3
		k += 1

print(d)

print(d[0] + "." + d[1] + "." + d[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 20:35:41) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace("9.","9")
print(h)
-- EXECUTION TIME:
0.473093
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123.
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000.987.654.321.
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321.
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:35:56) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 20:35:58) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		

print(v)
-- EXECUTION TIME:
0.455732
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123.
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321.
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321.
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:35:59) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:36:16) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace("9.","9")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:36:19) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace("9.","9")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:37:00) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 20:37:02) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(s[-1],"")
print(h)
-- EXECUTION TIME:
0.413532
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
12.
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
23.456.789.000.987.654.32.
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.32.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:37:03) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:38:20) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(v[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:38:36) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:38:38) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:38:44) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(v[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:39:14) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:39:18) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:40:07) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:40:10) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:40:13) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:40:17) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
h = v.replace(s[-1],"")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:41:14) 
-- CODE:
from numpy import *

s = str(input(""))

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		v = v + x + "."
		
		i += 3
		
h = v.replace(,"")
print(h)
-- ERROR:
File "XXXX", line 16
    h = v.replace(,"")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:43:56) 
-- CODE:
s = (input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
	  
		v += x + "."
		
		i += 3
		
h = v
print(h)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:44:03) 
-- CODE:
s = input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
	  
		v += x + "."
		
		i += 3
		
h = v
print(h)
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:46:01) 
-- CODE:
s = input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
	  
		if i < len(s) - 3
			v += x + "."
		else:
			v += x
		
		i += 3
		
h = v
print(h)
-- ERROR:
File "XXXX", line 11
    if i < len(s) - 3
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:46:07) 
-- CODE:
s = input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
	  
		if i < len(s) - 3.0
			v += x + "."
		else:
			v += x
		
		i += 3
		
h = v
print(h)
-- ERROR:
File "XXXX", line 11
    if i < len(s) - 3.0
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:46:12) 
-- CODE:
s = input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
	  
		if i < len(s)
			v += x + "."
		else:
			v += x
		
		i += 3
		
h = v
print(h)
-- ERROR:
File "XXXX", line 11
    if i < len(s)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 20:46:20) 
-- CODE:
s = input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
	  
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
		
		i += 3
		
h = v
print(h)
-- EXECUTION TIME:
0.162453
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:24:29) 
-- CODE:
s = input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
		
		i += 3
		

print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:24:30) 
-- CODE:
s = input("")

i = 0
v = ""

while i < len(s):
	if len(s) % 3 == 0 and len(s) >= 3:
		
		x = s[i:i+3]
		
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
		
		i += 3
		

print(v)
-- EXECUTION TIME:
0.151219
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
